--- a/.env.example
+++ b/.env.example
@@ -13,13 +13,9 @@ NEXTAUTH_URL=http://app.localhost:3000
 NEXT_PUBLIC_ROOT_DOMAIN=vercel.pub
 
 # PostgreSQL database URL – get one here: https://vercel.com/docs/storage/vercel-postgres/quickstart
-POSTGRES_URL="postgres://default:0wTWsafeAn4C@ep-twilight-cell-26459064-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb"
-POSTGRES_PRISMA_URL="postgres://default:0wTWsafeAn4C@ep-twilight-cell-26459064-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb?pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NON_POOLING="postgres://default:0wTWsafeAn4C@ep-twilight-cell-26459064.us-east-1.postgres.vercel-storage.com:5432/verceldb"
-POSTGRES_USER="default"
-POSTGRES_HOST="ep-twilight-cell-26459064-pooler.us-east-1.postgres.vercel-storage.com"
-POSTGRES_PASSWORD="0wTWsafeAn4C"
-POSTGRES_DATABASE="verceldb"
+POSTGRES_URL=
+POSTGRES_PRISMA_URL=
+
 
 # Vercel Blob Storage for image uploads – currently in beta, please fill out this form for access: https://tally.so/r/nPDMNd. Setup instructions: https://vercel.com/docs/storage/vercel-blob/quickstart
 BLOB_READ_WRITE_TOKEN=
